--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -1,25 +1,45 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
 	<div class="container-fluid">
-		<a class="navbar-brand" href="#">Navbar</a>
+		<a class="navbar-brand" href="{{ path('home.index')}}"><img src="{{ asset('assets/images/logopb.png')}}" alt="Logo" style="max-width: 4rem;"></a>
+
+
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarColor01">
 			<ul class="navbar-nav me-auto">
 				<li class="nav-item">
-					<a class="nav-link active" href="#">Home
+					<a class="nav-link active" href="{{ path('readme')}}">ReadMe
+
 						<span class="visually-hidden">(current)</span>
 					</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">Features</a>
+					<a class="nav-link" href="#">M'inscrire en tant que franchisé</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">Pricing</a>
+					<a class="nav-link" href="#">Me connecter</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">About</a>
+					<a class="nav-link" href="#">Trier la liste des partenaires</a>
 				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Rechercher un partenaire</a>
+				</li>
+
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Marketing</a>
+					<div class="dropdown-menu">
+						<a class="dropdown-item" href="#">Gérer les partenaires</a>
+						<a class="dropdown-item" href="#">Gérer les structures</a>
+						<a class="dropdown-item" href="#">Gestion des Permissions</a>
+
+						<a class="dropdown-item" href="#">Gestion des Mails</a>
+						<div class="dropdown-divider"></div>
+						<a class="dropdown-item" href="#">Separated link</a>
+					</div>
+				</li>
+
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
 					<div class="dropdown-menu">
