--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
 	<div class="container-fluid">
-		<a class="navbar-brand" href="{{ path('home.index')}}"><img src="{{ asset('assets/images/logopb.png')}}" alt="Logo" style="max-width: 4rem;"></a>
+		<a class="navbar-brand" href="{{ path('home.index')}}"><img src="{{ asset('assets/images/logopb.png')}}" alt="Logo" style="max-width: 4rem; border-radius: 30px;"></a>
 
 
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
