--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -15,10 +15,13 @@
 					</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">M'inscrire en tant que franchisé</a>
+					<a class="nav-link" href="{{ path('readme')}}">M'inscrire en tant que franchisé form contact</a>
+
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">Me connecter</a>
+					<a class="nav-link" href="{{ path('app_login')}}">Me connecter</a>
+
+
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="#">Trier la liste des partenaires</a>
@@ -30,11 +33,17 @@
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Marketing</a>
 					<div class="dropdown-menu">
-						<a class="dropdown-item" href="#">Gérer les partenaires</a>
-						<a class="dropdown-item" href="#">Gérer les structures</a>
-						<a class="dropdown-item" href="#">Gestion des Permissions</a>
+						<a class="dropdown-item" href="{{ path('app_partner_index')}}">Gérer les partenaires</a>
 
-						<a class="dropdown-item" href="#">Gestion des Mails</a>
+
+						<a class="dropdown-item" href="{{ path('app_sporthall_index')}}">Gérer les structures</a>
+
+
+						<a class="dropdown-item" href="{{ path('app_permission_index')}}">Gestion des Permissions</a>
+
+
+						<a class="dropdown-item" href="{{ path('readme')}}">Gestion des Mails</a>
+
 						<div class="dropdown-divider"></div>
 						<a class="dropdown-item" href="#">Separated link</a>
 					</div>
