--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -1,14 +1,23 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Accueil
+{% block title %}Accueil PlanetBody
 {% endblock %}
 
 {% block body %}
 	<div class="jumbotron">
-		<h1 class="display-4">Hello, world!</h1>
-		<p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+		<h1 class="display-4">PlanetBody</h1>
+		<p class="lead">Afin de proursuivre son développement, PlanetBody est à la recherche des nouveaux talents.</p>
+
 		<hr class="my-4">
-		<p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-		<a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+		<p>Vous voulez gérer votre compte adhérent PlanetBody:</p>
+
+		<a class="btn btn-primary btn-lg" href="{{ path('app_login')}}" role="button">Cliquez ici!</a>
+
+
+		<hr class="my-4">
+		<p>Vous voulez rejoindre notre équipe et devenir membre PlanetBody pour profiter de l'ensemble de nos prestations. Vous bénéfierez de tous les avantages de nos franchisés:</p>
+
+		<a class="btn btn-primary btn-lg" href="{{ path('app_contact')}}" role="button">Ouvrir un club sous franchise</a>
+
 	</div>
 {% endblock %}
