update relation in the DB + index Partner + index Sporthall

--- a/templates/pages/contact/index.html.twig
+++ b/templates/pages/contact/index.html.twig
@@ -20,6 +20,8 @@
 		<h1>Formulaire de contact - Première Connexion Franchisé</h1>
 
 		{{ form(form) }}
+
+			<h3>Merci de votre confiance, nous vous contacterons par email pour la suite de votre demande.</h3>
 		</div>
 
 
