--- a/templates/pages/partner/edit.html.twig
+++ b/templates/pages/partner/edit.html.twig
@@ -1,14 +1,16 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Partner
+{% block title %}Activation Statut
 {% endblock %}
 
 {% block body %}
-	<h1>Edit Partner</h1>
+	<h1>Edit Partner/ Désactiver / Activer un compte</h1>
 
 	{{ include('pages/partner/_form.html.twig', {'button_label': 'Update'}) }}
 
 	<a href="{{ path('app_partner_index') }}">back to list</a>
 
+
+	<h1>ENvoyer un email</h1>
 	{{ include('pages/partner/_delete_form.html.twig') }}
 {% endblock %}
