--- a/templates/pages/partner/index.html.twig
+++ b/templates/pages/partner/index.html.twig
@@ -1,39 +1,59 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Partner index{% endblock %}
+{% block title %}Partner index
+{% endblock %}
 
 {% block body %}
-    <h1>Partner index</h1>
+	<div class="container mt-4">
+		<h1>Liste des Franchisés</h1>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Contact</th>
-                <th>Contract</th>
-                <th>Is_enable</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for partner in partners %}
-            <tr>
-                <td>{{ partner.id }}</td>
-                <td>{{ partner.contact }}</td>
-                <td>{{ partner.contract }}</td>
-                <td>{{ partner.isEnable ? 'Yes' : 'No' }}</td>
-                <td>
-                    <a href="{{ path('app_partner_show', {'id': partner.id}) }}">show</a>
-                    <a href="{{ path('app_partner_edit', {'id': partner.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="5">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+		<table class="table">
+			<thead>
+				<tr>
+					<th>Id</th>
+					<th>Société</th>
+					<th>Ville</th>
+					<th>Contact</th>
+					<th>Contrat</th>
+					<th>Statut</th>
+					<th>Actions</th>
+				</tr>
+			</thead>
+			<tbody>
 
-    <a href="{{ path('app_partner_new') }}">Create new</a>
+
+				{% for partner in partners %}
+
+
+					<tr>
+
+
+						<td>{{ partner.id }}</td>
+						<td>{{ partner.user.name }}</td>
+						<td>{{ partner.user.city }}</td>
+						<td>{{ partner.user.contact }}</td>
+						<td>{{ partner.contract }}</td>
+						<td>{{ partner.isEnable ? 'Actif' : 'Désactivé' }}</td>
+						<td>
+							{# <a href="{{ path('app_partner_show', {'id': partner.id}) }}">show</a> #}
+							<a href="{{ path('app_partner_edit', {'id': partner.id}) }}">Activer/Désactiver</a>
+						</td>
+
+
+					</tr>
+
+
+				{% else %}
+					<tr>
+						<td colspan="5">no records found</td>
+					</tr>
+				{% endfor %}
+			</tbody>
+
+
+		</table>
+
+		{# <a href="{{ path('app_partner_new') }}">Create new</a> #}
+	</div>
+
 {% endblock %}
