--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -15,7 +15,7 @@
 					</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="{{ path('readme')}}">M'inscrire en tant que franchisé form contact</a>
+					<a class="nav-link" href="{{ path('app_contact')}}">M'inscrire en tant que franchisé form contact</a>
 
 				</li>
 				<li class="nav-item">
@@ -42,10 +42,16 @@
 						<a class="dropdown-item" href="{{ path('app_permission_index')}}">Gestion des Permissions</a>
 
 
-						<a class="dropdown-item" href="{{ path('readme')}}">Gestion des Mails</a>
+						<a class="dropdown-item" href="{{ path('app_mailing_index')}}">Gestion des Mails</a>
+
 
 						<div class="dropdown-divider"></div>
-						<a class="dropdown-item" href="#">Separated link</a>
+						<a class="dropdown-item" href="{{ path('app_register_partner')}}">Création d'un mail Partenaire</a>
+
+
+						<a class="dropdown-item" href="{{ path('app_register_sporthall')}}">Création d'un mail Salle de sport</a>
+
+
 					</div>
 				</li>
 
