--- a/templates/pages/permission/edit.html.twig
+++ b/templates/pages/permission/edit.html.twig
@@ -1,14 +1,17 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Permission
+{% block title %}Modification Permission
 {% endblock %}
 
 {% block body %}
-	<h1>Edit Permission</h1>
+	<div class="container mt-4">
+		<h1>Modifier la permission</h1>
 
-	{{ include('pages/permission/_form.html.twig', {'button_label': 'Update'}) }}
+		{{ include('pages/permission/_form.html.twig', {'button_label': 'Enregistrer'}) }}
 
-	<a href="{{ path('app_permission_index') }}">back to list</a>
+		<a class="btn btn-secondary btn-lg mt-4" href="{{ path('app_permission_index') }}">Retour à la liste</a>
 
-	{{ include('pages/permission/_delete_form.html.twig') }}
+
+		{{ include('pages/permission/_delete_form.html.twig') }}</div>
+
 {% endblock %}
