--- a/templates/pages/sporthall/editpermission.html.twig
+++ b/templates/pages/sporthall/editpermission.html.twig
@@ -14,7 +14,7 @@
 
 		{{ include('pages/sporthall/_form.html.twig', {'button_label': 'Enregistrer'}) }}
 
-		<a class="btn btn-secondary btn-lg mt-4" href="{{ path('app_sporthall_index') }}">Retour à la liste</a>
+		<a class="btn btn-secondary btn-lg mt-4" href="{{ path('app_sporthallpermission_index') }}">Retour à la liste</a>
 
 
 		<h1>ENvoyer un email</h1>
