Update Fixtures with contact and add Claims

--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -27,6 +27,13 @@
 
 			<a class="btn btn-primary btn-lg" href="{{ path('app_contact')}}" role="button">Ouvrir un club sous franchise</a>
 
+			<a class="btn btn-primary btn-lg" href="{{ path('app_claim')}}" role="button">Demande d'informations</a>
+			<hr class="my-4">
+			<p>Une réclamation? Contactez-nous. Notre équipe répondra au plus vite à vos sollicitations.</p>
+
+			<a class="btn btn-primary btn-lg" href="{{ path('app_claim')}}" role="button">Réclamation</a>
+
+
 		</div>
 	</div>
 
