--- a/templates/partials/_footer.html.twig
+++ b/templates/partials/_footer.html.twig
@@ -33,6 +33,15 @@
 			<a href=" {{ path('cvg')}} ">
 
 				CVG</a>
+			<a href=" {{ path('app_claim')}} ">
+
+
+				Réclamations</a>
+			<a href=" {{ path('app_claim')}} ">
+
+
+				Contactez-nous!</a>
+
 
 		</div>
 	</footer>
