--- a/templates/pages/claim/index.html.twig
+++ b/templates/pages/claim/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Première Connexion Franchisé
+{% block title %}Réclamation-Demande d'info
 {% endblock %}
 
 {% block body %}
@@ -18,7 +18,7 @@
 					</div>
 				{% endfor %} #}
 
-		<h1>Formulaire de contact - Première Connexion Franchisé</h1>
+		<h1>Formulaire de contact - Réclamation</h1>
 
 		{{ form(form) }}
 
