--- a/templates/pages/contact/indexpartner.html.twig
+++ b/templates/pages/contact/indexpartner.html.twig
@@ -7,18 +7,18 @@
 	<div
 		class="container">
 		{# {% for message in app.flashes('success') %}
-					<div class="alert alert-success mt-4">
-						{{ message }}
-					</div>
-				{% endfor %}
-		
-				{% for message in app.flashes('danger') %}
-					<div class="alert alert-success mt-4">
-						{{ message }}
-					</div>
-				{% endfor %} #}
+							<div class="alert alert-success mt-4">
+								{{ message }}
+							</div>
+						{% endfor %}
+				
+						{% for message in app.flashes('danger') %}
+							<div class="alert alert-success mt-4">
+								{{ message }}
+							</div>
+						{% endfor %} #}
 
-		<h1>Formulaire de contact - Première Connexion Franchisé</h1>
+		<h1>Formulaire de Pré-Inscription d'un Franchisé</h1>
 
 		{{ form(form) }}
 
