--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -48,10 +48,10 @@
 
 
 						<div class="dropdown-divider"></div>
-						<a class="dropdown-item" href="{{ path('app_register_partner')}}">Création d'un mail Partenaire</a>
+						<a class="dropdown-item" href="{{ path('app_register_partner')}}">Ajout d'un Partenaire</a>
 
 
-						<a class="dropdown-item" href="{{ path('app_register_sporthall')}}">Création d'un mail Salle de sport</a>
+						<a class="dropdown-item" href="{{ path('app_register_sporthall')}}">Ajout d'une Salle de sport</a>
 
 
 					</div>
