Add Index for the pre-register of the partners

--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -23,11 +23,17 @@
 
 
 			<hr class="my-4">
-			<p>Vous voulez rejoindre notre équipe et devenir membre PlanetBody pour profiter de l'ensemble de nos prestations. Vous bénéfierez de tous les avantages de nos franchisés:</p>
+			<p>Vous voulez rejoindre notre équipe et devenir membre PlanetBody pour profiter de l'ensemble de CREER UN CONTROLLER!!!
+				<a href=" {{ path('app_permission_index')}} ">nos prestations</a>. Vous bénéfierez de tous les avantages de nos franchisés:</p>
+
 
 			<a class="btn btn-primary btn-lg" href="{{ path('app_contact')}}" role="button">Ouvrir un club sous franchise</a>
 
 			<a class="btn btn-primary btn-lg" href="{{ path('app_claim')}}" role="button">Demande d'informations</a>
+
+			<a class="btn btn-primary btn-lg" href="{{ path('app_permission_index')}}" role="button">Voir nos offres</a>
+
+
 			<hr class="my-4">
 			<p>Une réclamation? Contactez-nous. Notre équipe répondra au plus vite à vos sollicitations.</p>
 
