--- a/templates/pages/contact/indexpartner.html.twig
+++ b/templates/pages/contact/indexpartner.html.twig
@@ -7,20 +7,22 @@
 	<div
 		class="container">
 		{# {% for message in app.flashes('success') %}
-							<div class="alert alert-success mt-4">
-								{{ message }}
-							</div>
-						{% endfor %}
-				
-						{% for message in app.flashes('danger') %}
-							<div class="alert alert-success mt-4">
-								{{ message }}
-							</div>
-						{% endfor %} #}
+															<div class="alert alert-success mt-4">
+																{{ message }}
+															</div>
+														{% endfor %}
+												
+														{% for message in app.flashes('danger') %}
+															<div class="alert alert-success mt-4">
+																{{ message }}
+															</div>
+														{% endfor %} #}
 
 		<h1>Formulaire de Pré-Inscription d'un Franchisé</h1>
+		<a class="btn btn-primary btn" href="{{ path('app_permission_index')}}" role="button">Revoir nos offres, modifier la route!!!</a>
 
 		{{ form(form) }}
+
 
 			<h3>Merci de votre confiance, nous vous contacterons par email pour la suite de votre demande.</h3>
 		</div>
