--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -35,6 +35,7 @@
 					<div class="dropdown-menu">
 						<a class="dropdown-item" href="{{ path('app_partner_index')}}">Activer/désactiver les partenaires</a>
 						<a class="dropdown-item" href="{{ path('app_partnerpermission_index')}}">Gérer les partenaires et les permissions</a>
+						<a class="dropdown-item" href="{{ path('app_contact_index')}}">Gérer les pré-inscription des partenaires</a>
 
 
 						<a class="dropdown-item" href="{{ path('app_sporthall_index')}}">Activer/désactiver les structures</a>
