--- a/templates/registration/register_partner.html.twig
+++ b/templates/registration/register_partner.html.twig
@@ -1,18 +1,28 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register
+{% block title %}Inscription
 {% endblock %}
 
 {% block body %}
 	<h1>Inscpription envoyé par mail pour les Franchisés</h1>
 
 	{{ form_start(registrationForm) }}
+
+	{{ form_row(registrationForm.name) }}
+	{{ form_row(registrationForm.contact) }}
+
+	{{ form_row(registrationForm.address) }}
+	{{ form_row(registrationForm.zipcode) }}
+	{{ form_row(registrationForm.city) }}
+
+
 	{{ form_row(registrationForm.email) }}
 	{{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
+            label: 'Mot de passe'
         }) }}
 	{{ form_row(registrationForm.agreeTerms) }}
 
-	<button type="submit" class="btn">Register</button>
+	<button type="submit" class="btn btn-primary btn-lg mt-4">Valider</button>
+
 	{{ form_end(registrationForm) }}
 {% endblock %}
