relation OneToOne User-Partner

--- a/templates/pages/partner/index.html.twig
+++ b/templates/pages/partner/index.html.twig
@@ -16,7 +16,7 @@
 					<th>Contact</th>
 					<th>Contrat</th>
 					<th>Statut</th>
-					<th>Actions</th>
+					<th>Actions et Contrats</th>
 				</tr>
 			</thead>
 			<tbody>
