--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -33,7 +33,7 @@
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Marketing</a>
 					<div class="dropdown-menu">
-						<a class="dropdown-item" href="{{ path('app_partner_index')}}">Activer/désactiver les partenaires</a>
+						<a class="dropdown-item" href="{{ path('app_partner_index')}}">Activer/désactiver les partenaires et choix contrat</a>
 						<a class="dropdown-item" href="{{ path('app_partnerpermission_index')}}">Gérer les partenaires et les permissions</a>
 						<a class="dropdown-item" href="{{ path('app_contact_index')}}">Gérer les pré-inscription des partenaires</a>
 
