--- a/templates/registration/register_sporthall.html.twig
+++ b/templates/registration/register_sporthall.html.twig
@@ -1,17 +1,26 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}Inscription
+{% endblock %}
 
 {% block body %}
-    <h1>Register</h1>
+	<h1>Inscription d'une salle de sport par le franchisé ou l'équipe Marketing PlanetBody</h1>
 
-    {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
+	{{ form_start(registrationForm) }}
+	{{ form_row(registrationForm.name) }}
+	{{ form_row(registrationForm.contact) }}
+
+	{{ form_row(registrationForm.address) }}
+	{{ form_row(registrationForm.zipcode) }}
+	{{ form_row(registrationForm.city) }}
+
+	{{ form_row(registrationForm.email) }}
+	{{ form_row(registrationForm.plainPassword, {
+            label: 'Mot de passe'
         }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
+	{{ form_row(registrationForm.agreeTerms) }}
 
-        <button type="submit" class="btn">Register</button>
-    {{ form_end(registrationForm) }}
+	<button type="submit" class="btn btn-primary btn-lg mt-4">Valider</button>
+
+	{{ form_end(registrationForm) }}
 {% endblock %}
