Add message for update permission of the partners

--- a/templates/emails/partnerpermission.html.twig
+++ b/templates/emails/partnerpermission.html.twig
@@ -13,14 +13,10 @@
 			{{ partner.user.name }}</p>
 		<p>Message :</p>
 		<div>
-			<p>Votre statut a changé, il est maintenant:
-				{{ partner.isEnable ? 'Actif' : 'Désactivé' }}
-				et votre contrat est:
-				{{ partner.contract }}.
+			<p>La liste de vos options a été mise à jour selon votre demande.
 			</p>
 			<p>Cordialement</p>
 			<p>L'équipe Marketing de PlanetBody.</p>
-
 
 		</div>
 	</body>
