--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -31,7 +31,7 @@
 
 			<a class="btn btn-primary btn-lg" href="{{ path('app_claim')}}" role="button">Demande d'informations</a>
 
-			<a class="btn btn-primary btn-lg" href="{{ path('app_permission_index')}}" role="button">Voir nos offres</a>
+			<a class="btn btn-primary btn-lg" href="{{ path('app_showpermission_index')}}" role="button">Voir nos offres</a>
 
 
 			<hr class="my-4">
