--- a/templates/pages/mailing/new.html.twig
+++ b/templates/pages/mailing/new.html.twig
@@ -1,25 +1,29 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Mailing
+{% block title %}Rédiger un mail
 {% endblock %}
 
 {% block body %}
 
-	{% for message in app.flashes('success') %}
-		<div class="alert alert-success mt-4">
-			{{ message }}
-		</div>
-	{% endfor %}
+	<div class="container mt-4">
+		{% for message in app.flashes('success') %}
+			<div class="alert alert-success mt-4">
+				{{ message }}
+			</div>
+		{% endfor %}
 
-	{% for message in app.flashes('danger') %}
-		<div class="alert alert-success mt-4">
-			{{ message }}
-		</div>
-	{% endfor %}
+		{% for message in app.flashes('danger') %}
+			<div class="alert alert-success mt-4">
+				{{ message }}
+			</div>
+		{% endfor %}
 
-	<h1>Create new Mailing</h1>
+		<h1>Rédiger un mail</h1>
 
-	{{ include('pages/mailing/_form.html.twig') }}
+		{{ include('pages/mailing/_form.html.twig') }}
 
-	<a href="{{ path('app_mailing_index') }}">back to list</a>
+		<a class="btn btn-secondary btn-lg mt-4" href="{{ path('app_mailing_index') }}">Retour à la liste</a>
+
+	</div>
+
 {% endblock %}
