--- a/templates/pages/sporthall/indexpermission.html.twig
+++ b/templates/pages/sporthall/indexpermission.html.twig
@@ -56,6 +56,10 @@
 		</table>
 
 		{# <a href="{{ path('app_sporthall_new') }}">Create new</a> #}
+		<div class="navigation d-flex justify-content-center mt-4">
+			{{ knp_pagination_render(sporthalls) }}
+		</div>
+
 	</div>
 
 {% endblock %}
