--- a/templates/pages/partner/indexpermission.html.twig
+++ b/templates/pages/partner/indexpermission.html.twig
@@ -64,6 +64,10 @@
 		</table>
 
 		{# <a href="{{ path('app_partner_new') }}">Create new</a> #}
+		<div class="navigation d-flex justify-content-center mt-4">
+			{{ knp_pagination_render(partners) }}
+		</div>
+
 	</div>
 
 {% endblock %}
