--- a/templates/pages/permission/index.html.twig
+++ b/templates/pages/permission/index.html.twig
@@ -36,6 +36,9 @@
 		</table>
 
 		<a class="btn btn-primary btn-lg mt-4" href="{{ path('app_permission_new') }}">Créer une nouvelle option</a>
+		<div class="navigation d-flex justify-content-center mt-4">
+			{{ knp_pagination_render(permissions) }}
+		</div>
 
 	</div>
 
