Add Table, Controller and Templates for Contract

--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -15,16 +15,17 @@
 			<hr class="my-4">
 
 			<img src="{{ asset('assets/images/room.jpg')}}" alt="logo" style="max-width: 35rem;" class="mx-auto d-block">
+			<hr class="my-4">
 
-
+			<h2>Vous êtes déjà membre et vous souhaiter profiter de vos services.</h2>
 			<p class="mt-4">Vous voulez gérer votre compte adhérent PlanetBody:</p>
 
 			<a class="btn btn-primary btn-lg" href="{{ path('app_login')}}" role="button">Cliquez ici!</a>
 
 
 			<hr class="my-4">
-			<p>Vous voulez rejoindre notre équipe et devenir membre PlanetBody pour profiter de l'ensemble de CREER UN CONTROLLER!!!
-				<a href=" {{ path('app_permission_index')}} ">nos prestations</a>. Vous bénéfierez de tous les avantages de nos franchisés:</p>
+			<h2>Vous voulez rejoindre notre équipe et devenir membre PlanetBody pour profiter de l'ensemble de
+				<a href=" {{ path('app_permission_index')}} ">nos prestations</a>. Vous bénéfierez de tous les avantages de nos franchisés:</h2>
 
 
 			<a class="btn btn-primary btn-lg" href="{{ path('app_contact')}}" role="button">Ouvrir un club sous franchise</a>
