--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -19,7 +19,7 @@
 
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="{{ path('app_login')}}">Me connecter</a>
+					<a class="nav-link" href="{{ path('app_login')}}">Mon espace</a>
 
 
 				</li>
@@ -45,7 +45,9 @@
 						<div class="dropdown-divider"></div>
 
 
-						<a class="dropdown-item" href="{{ path('app_mailing_index')}}">Gestion des Mails en cours de développement</a>
+						<a class="dropdown-item" href="{{ path('app_mailing_index')}}">Gestion des Mails/Newsletters</a>
+						<div class="dropdown-divider"></div>
+						<a class="dropdown-item" href="{{ path('app_contract_index')}}">Gestion des Contrats</a>
 
 
 						<div class="dropdown-divider"></div>
