--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -18,8 +18,8 @@
 				</div>
 			{% endif %}
 
-			<h1 class="h3 mb-3 font-weight-normal">Enregistrez-vous</h1>
-			<label for="inputEmail">Email</label>
+			<h1 class="h3 mb-3 font-weight-normal">Connectez vous à votre espace.</h1>
+			<label for="inputEmail">Entrez votre adresse Email</label>
 			<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
 			<label for="inputPassword">Mot de passe</label>
 			<input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
