--- a/templates/pages/readme.html.twig
+++ b/templates/pages/readme.html.twig
@@ -7,13 +7,26 @@
 {% block body %}
 	<h1 class="text-center">MODE D'EMPLOI DU SITE</h1>
 
-	<p>recruteur@gmail.com</p>
+	<h2>Admin: Equipe technique PlanetBody</h2>
+	<p>cyrisa02.test@gmail.com</p>
+	<p>code: admin</p>
 
-	<p>consultantok@gmail.com</p>
 
-	<p>candidat@test1.com</p>
+	<h2>Franchisé actif</h2>
+	<p>fitness02@gmail.com</p>
+	<p>code: azerty</p>
 
-	<p>admin@trt.fr</p>
+	<h2>Franchisé désactivé</h2>
+	<p>fitness02desactif@gmail.com</p>
+	<p>code: azerty</p>
+
+	<h2>Structure active</h2>
+	<p>structure@gmail.com</p>
+	<p>code: azerty</p>
+
+	<h2>Structure désactivée</h2>
+	<p>structuredesactive@gmail.com</p>
+	<p>code: azerty</p>
 
 
 {% endblock %}
