--- a/templates/pages/sporthall/index.html.twig
+++ b/templates/pages/sporthall/index.html.twig
@@ -4,6 +4,8 @@
 {% endblock %}
 
 {% block body %}
+	{# {% if user.partner.isEnable == true %} #}
+
 	<div class="container mt-4">
 		<h1>Liste des salles de sport</h1>
 
@@ -46,5 +48,5 @@
 		</div>
 
 	</div>
-
+	{# {% endif %} #}
 {% endblock %}
