--- a/templates/pages/contract/index.html.twig
+++ b/templates/pages/contract/index.html.twig
@@ -40,6 +40,11 @@
 			</tbody>
 		</table>
 
+		<div class="navigation d-flex justify-content-center mt-4">
+			{{ knp_pagination_render(contracts) }}
+		</div>
+
+
 		<a class="btn btn-secondary btn-lg mt-4" href="{{ path('app_contract_new') }}">Créer un nouveau contrat</a>
 
 	</div>
