--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -4,7 +4,14 @@
 {% endblock %}
 
 {% block body %}
-	<div class="container mt-4">
+	<div
+		class="container mt-4">
+		{# {% if  sporthall.isEnable == false %}
+		
+					<h3>Merci de votre inscription, nous traitons votre demande</h3>
+				{% endif %} #}
+
+
 		<div class="jumbotron">
 			<h1 class="display-4">PlanetBody
 			</h1>
