--- a/templates/pages/user/show.html.twig
+++ b/templates/pages/user/show.html.twig
@@ -4,56 +4,69 @@
 {% endblock %}
 
 {% block body %}
-	<h1>User</h1>
+	<div class="container mt-4">
+		<h1>Mon Compte</h1>
 
-	<table class="table">
-		<tbody>
-			<tr>
-				<th>Id</th>
-				<td>{{ user.id }}</td>
-			</tr>
-			<tr>
-				<th>Email</th>
-				<td>{{ user.email }}</td>
-			</tr>
-			<tr>
-				<th>Roles</th>
-				<td>{{ user.roles ? user.roles|json_encode : '' }}</td>
-			</tr>
-			<tr>
-				<th>Password</th>
-				<td>{{ user.password }}</td>
-			</tr>
-			<tr>
-				<th>Name</th>
-				<td>{{ user.name }}</td>
-			</tr>
-			<tr>
-				<th>Address</th>
-				<td>{{ user.address }}</td>
-			</tr>
-			<tr>
-				<th>Zipcode</th>
-				<td>{{ user.zipcode }}</td>
-			</tr>
-			<tr>
-				<th>City</th>
-				<td>{{ user.city }}</td>
-			</tr>
-			<tr>
-				<th>Created_at</th>
-				<td>{{ user.createdAt ? user.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-			</tr>
-			<tr>
-				<th>Contact</th>
-				<td>{{ user.contact }}</td>
-			</tr>
-		</tbody>
-	</table>
+		<table class="table">
+			<tbody>
+				<tr>
+					<th>N°</th>
+					<td>{{ user.id }}</td>
+				</tr>
+				<tr>
+					<th>Email</th>
+					<td>{{ user.email }}</td>
+				</tr>
+				{# <tr>
+																																																	<th>Roles</th>
+																																																	<td>{{ user.roles ? user.roles|json_encode : '' }}</td>
+																																																</tr> #}
+				{# <tr>
+																																																	<th>Password</th>
+																																																	<td>{{ user.password }}</td>
+																																																</tr> #}
+				<tr>
+					<th>Société</th>
+					<td>{{ user.name }}</td>
+				</tr>
+				<tr>
+					<th>Adresse</th>
+					<td>{{ user.address }}</td>
+				</tr>
+				<tr>
+					<th>Code Postal</th>
+					<td>{{ user.zipcode }}</td>
+				</tr>
+				<tr>
+					<th>Ville</th>
+					<td>{{ user.city }}</td>
+				</tr>
+				{# <tr>
+																																																	<th>Created_at</th>
+																																																	<td>{{ user.createdAt ? user.createdAt|date('Y-m-d H:i:s') : '' }}</td>
+																																																</tr> #}
+				<tr>
+					<th>Contact</th>
+					<td>{{ user.contact }}</td>
+				</tr>
+				<tr>
+					<th>Options</th>
+					<td>
+						{# {% for permission in permissions %}
+													{{ permission.name }}
+													/
+												{% endfor %} #}
+					</td>
 
-	<a href="{{ path('app_user_index') }}">back to list</a>
+				</tr>
 
-	<a href="{{ path('app_user_edit', {'id': user.id}) }}">edit</a>
+			</tbody>
+		</table>
 
-	{{ include('pages/user/_delete_form.html.twig') }}
-{% endblock %}
+		<a href="{{ path('home.index') }}">Retour accueil</a>
+
+		{# <a href="{{ path('app_user_edit', {'id': user.id}) }}">edit</a>
+																								
+																										{{ include('pages/user/_delete_form.html.twig') }}</div> #}
+
+	{% endblock %}
