--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -14,64 +14,182 @@
 						<span class="visually-hidden">(current)</span>
 					</a>
 				</li>
+
 				<li class="nav-item">
-					<a class="nav-link" href="{{ path('app_contact')}}">M'inscrire en tant que franchisé form contact</a>
+					<a class="nav-link active" href="{{ path('app_contact')}}">Ouvrir une franchise
 
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="{{ path('app_login')}}">Mon espace</a>
-
-
+						<span class="visually-hidden">(current)</span>
+					</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">Trier la liste des partenaires</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Rechercher un partenaire</a>
-				</li>
+					<a class="nav-link active" href="{{ path('app_showpermission_index')}}">Voir nos offres
 
-				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Marketing</a>
-					<div class="dropdown-menu">
-						<a class="dropdown-item" href="{{ path('app_contact_index')}}">Gérer les pré-inscriptions des partenaires</a>
-						<a class="dropdown-item" href="{{ path('app_register_partner')}}">Ajout d'un Partenaire</a>
-
-						<a class="dropdown-item" href="{{ path('app_partner_index')}}">Activer/désactiver les partenaires et choix contrat</a>
-						<a class="dropdown-item" href="{{ path('app_partnerpermission_index')}}">Gérer les partenaires et les permissions</a>
-
-						<div class="dropdown-divider"></div>
-
-						<a class="dropdown-item" href="{{ path('app_permission_index')}}">Gestion des Permissions</a>
-						<div class="dropdown-divider"></div>
-
-
-						<a class="dropdown-item" href="{{ path('app_mailing_index')}}">Gestion des Mails/Newsletters</a>
-						<div class="dropdown-divider"></div>
-						<a class="dropdown-item" href="{{ path('app_contract_index')}}">Gestion des Contrats</a>
-
-
-						<div class="dropdown-divider"></div>
-
-
-						<a class="dropdown-item" href="{{ path('app_register_sporthall')}}">Ajout d'une Salle de sport</a>
-						<a class="dropdown-item" href="{{ path('app_sporthall_index')}}">Activer/désactiver les structures</a>
-						<a class="dropdown-item" href="{{ path('app_sporthallpermission_index')}}">Gérer les structures et les permissions</a>
-
-
-					</div>
+						<span class="visually-hidden">(current)</span>
+					</a>
 				</li>
 
-				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-					<div class="dropdown-menu">
-						<a class="dropdown-item" href="#">Action</a>
-						<a class="dropdown-item" href="#">Another action</a>
-						<a class="dropdown-item" href="#">Something else here</a>
-						<div class="dropdown-divider"></div>
-						<a class="dropdown-item" href="#">Separated link</a>
-					</div>
-				</li>
+
+				{% if app.user %}
+					{% if is_granted('ROLE_ADMIN') %}
+
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Franchisés</a>
+							<div class="dropdown-menu">
+								<a class="dropdown-item" href="{{ path('app_contact_index')}}">Gérer les pré-inscriptions des partenaires</a>
+								<a class="dropdown-item" href="{{ path('app_register_partner')}}">Ajout d'un Partenaire Etape1</a>
+								<a class="dropdown-item" href="{{ path('app_user_index')}}">Ajout d'un Partenaire Etape2</a>
+
+
+								<a class="dropdown-item" href="{{ path('app_partner_index')}}">Activer/désactiver les partenaires et choix contrat</a>
+								<a class="dropdown-item" href="{{ path('app_partnerpermission_index')}}">Modifier les permissions</a>
+							</li>
+						</li>
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Structures</a>
+							<div class="dropdown-menu">
+
+
+								<a class="dropdown-item" href="{{ path('app_register_sporthall')}}">Ajout d'une Salle de sport</a>
+								<a class="dropdown-item" href="{{ path('app_sporthall_index')}}">Activer/désactiver les structures</a>
+								<a class="dropdown-item" href="{{ path('app_sporthallpermission_index')}}">Gérer les structures et les permissions</a>
+
+
+							</div>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link " href="{{ path('app_permission_index')}}">Permissions
+
+
+								<span class="visually-hidden">(current)</span>
+							</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link " href="{{ path('app_contract_index')}}">Contrats
+
+
+								<span class="visually-hidden">(current)</span>
+							</a>
+						</li>
+
+						<li class="nav-item">
+							<a class="nav-link " href="{{ path('app_mailing_index')}}">Mailing
+
+
+								<span class="visually-hidden">(current)</span>
+							</a>
+						</li>
+
+
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Général</a>
+							<div class="dropdown-menu">
+								<a class="dropdown-item" href="{{ path('app_contact_index')}}">Gérer les pré-inscriptions des partenaires</a>
+								<a class="dropdown-item" href="{{ path('app_register_partner')}}">Ajout d'un Partenaire Etape1</a>
+								<a class="dropdown-item" href="{{ path('app_user_index')}}">Ajout d'un Partenaire Etape2</a>
+
+
+								<a class="dropdown-item" href="{{ path('app_partner_index')}}">Activer/désactiver les partenaires et choix contrat</a>
+								<a class="dropdown-item" href="{{ path('app_partnerpermission_index')}}">Modifier les permissions</a>
+
+
+								<div class="dropdown-divider"></div>
+
+								<a class="dropdown-item" href="{{ path('app_permission_index')}}">Gestion des Permissions</a>
+								<div class="dropdown-divider"></div>
+
+
+								<a class="dropdown-item" href="{{ path('app_mailing_index')}}">Gestion des Mails/Newsletters</a>
+								<div class="dropdown-divider"></div>
+								<a class="dropdown-item" href="{{ path('app_contract_index')}}">Gestion des Contrats</a>
+
+
+								<div class="dropdown-divider"></div>
+
+
+								<a class="dropdown-item" href="{{ path('app_register_sporthall')}}">Ajout d'une Salle de sport</a>
+								<a class="dropdown-item" href="{{ path('app_sporthall_index')}}">Activer/désactiver les structures</a>
+								<a class="dropdown-item" href="{{ path('app_sporthallpermission_index')}}">Gérer les structures et les permissions</a>
+
+
+							</div>
+						</li>
+					{% elseif is_granted('ROLE_PARTNER')  %}
+						{# {% if isIsEnable == true %} #}
+
+
+						<li class="nav-item">
+							<a class="nav-link active" href="{{ path ('app_user_show',{'id':app.user.id})}}">Voir ses permissions
+
+
+								<span class="visually-hidden">(current)</span>
+							</a>
+						</li>
+
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Structures</a>
+							<div class="dropdown-menu">
+
+
+								<a class="dropdown-item" href="{{ path('app_register_sporthall')}}">Ajout d'une Salle de sport</a>
+								<a class="dropdown-item" href="{{ path('app_sporthall_index')}}">Activer/désactiver les structures</a>
+								<a class="dropdown-item" href="{{ path('app_sporthallpermission_index')}}">Gérer les structures et les permissions</a>
+
+
+							</div>
+						</li>
+
+
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+							<div class="dropdown-menu">
+								<a class="dropdown-item" href="#">Action</a>
+								<a class="dropdown-item" href="#">Another action</a>
+								<a class="dropdown-item" href="#">Something else here</a>
+								<div class="dropdown-divider"></div>
+								<a class="dropdown-item" href="#">Separated link</a>
+							</div>
+						</li>
+						{# {% endif %} #}
+
+					{% elseif is_granted('ROLE_SPORTHALL') %}
+						<li class="nav-item">
+							<a class="nav-link active" href="{{ path ('app_user_show',{'id':app.user.id})}}">Voir ses permissions
+
+
+								<span class="visually-hidden">(current)</span>
+							</a>
+						</li>
+
+						{# <li class="nav-item dropdown">
+													<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+													<div class="dropdown-menu">
+														<a class="dropdown-item" href="#">Action</a>
+														<a class="dropdown-item" href="#">Another action</a>
+														<a class="dropdown-item" href="#">Something else here</a>
+														<div class="dropdown-divider"></div>
+														<a class="dropdown-item" href="#">Separated link</a>
+													</div>
+												</li> #}
+					{% endif %}
+
+
+				{% endif %}
+
 			</ul>
+			<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+				{% if app.user %}
+
+					<li class="nav-item">
+						<a class="nav-link" href="{{ path('app_logout') }}">Me déconnecter</a>
+					</li>
+				{% else %}
+
+					<li class="nav-item">
+						<a class="nav-link" href="{{ path('app_login') }}">Mon Espace</a>
+					</li>
+				{% endif %}
+			</ul>
+
 			<form class="d-flex">
 				<input class="form-control me-sm-2" type="text" placeholder="Search">
 				<button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
